sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__false21/errors.duarouter
Error: Not numerical length definition in lane '2_0'.
Quitting (on error).
